# monoista

./: LICENSE  README.md  pyproject.toml  setup.cfg
monoista/: monoista.py
