[metadata]
name = monoista
version = 0.0.1
author = m0ono
author email = 
description = mini instagram
long_description = file: README.md
long_description_type = text/markdown
url = https://github.com/m0ono/monoista
classifiers =
		Programming Language :: Python :: 3
		License :: OSI Approved : MIT License
		Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True